app/globals.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
h1,
h2,
h3,
h4,
span,
p {
  margin: 0;
  padding: 0;
}
.logo {
  background-color: #b3e140;
  border-radius: 0px 0px 68px 0px;
  width: 167px;
  height: 184px;
  display: flex;
  justify-content: center;
  align-items: center;
}
.logo h1 {
  font-size: 38px;
  text-transform: uppercase;
}
.links {
  height: 75px;
  display: flex;
  flex: 1;
  align-items: flex-end;
  justify-content: center;
}
ul {
  display: flex;
  transform: translate(9px, 3px);
  justify-content: space-between;
  align-items: flex-end;
  border: 2px;
  width: 406px;
  padding-bottom: 6px;
  border-bottom: 2px solid #e5e5e5;
}
li {
  list-style-type: none;
}
a {
  text-transform: uppercase;
  text-decoration: none;
  font-size: 14px;
  color: black;
  letter-spacing: 2px;
}
nav {
  display: flex;
}
.socail-links {
  display: flex;
  align-items: flex-end;
  height: 67px;
  padding-right: 3.5rem;
  gap: 1.5rem;
}
.main-div {
  width: 50%;
}
.main-image {
  transform: rotate(4deg);
  scale: 1.1;
}
.parent-div {
  display: flex;
  justify-content: space-around;
}
.main-heading h2 {
  font-size: 102px;
  line-height: 109px;
  text-transform: uppercase;
  transform: translate(-150px, -64px);
  letter-spacing: 1px;
}
.main-heading button {
  transform: translateY(53px);
  width: 412px;
  background-color: #75a304;
  outline: none;
  border: none;
  color: #000;
  font-size: 30px;
  float: right;
  padding: 34px;
  filter: drop-shadow(0px 34px 66px rgba(0, 0, 0, 0.15));
}
.hero-section {
  background-color: #b3e140;
  border-radius: 284px 0px 0px 0px;
  padding-right: 1.5rem;
}
.hero-heading h1 {
  font-size: 122px;
  font-weight: 400;
  line-height: 130px;
  color: rgba(61, 86, 0, 0.26);
  text-align: end;
  text-transform: uppercase;
}
.hero-heading h2 {
  font-size: 59px;
  line-height: 63px;
  color: #000;
  text-align: end;
  transform: translate(-5px, -39px);
  text-transform: uppercase;
}
.card {
  width: 407px;
  margin-bottom: 1rem;
  background: #c3eb5f;
  border-radius: 99.5972px 0px 0px 0px;
  padding: 1rem;
}
.single-card {
  border-radius: 99.5972px 0px 0px 0px;
  padding: 1rem;
  margin: 1rem;
}
.card-image {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 1rem;
}

.card-div {
  padding-left: 1.5rem;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}
.card-name {
  font-style: normal;
  font-size: 2rem;
  color: #94bd2f;
  /* text-overflow:; */
  word-wrap: break-word;
}
.card-heading {
  padding: 2rem;
  display: flex;
  flex-direction: column;
  gap: 2rem;
}
@media screen and (max-width: 1290px) {
  .main-heading h2 {
    font-size: 62px;
  }
  .main-div img {
    max-inline-size: 100%;
    block-size: auto;
  }
  .card-div {
    justify-content: center;
  }
  .parent-div {
    flex-direction: column;
    align-items: center;
    height: auto;
  }
  .main-div {
    width: 100%;
  }
  .main-heading {
    width: 100%;
    text-align: center;
  }
}
@media screen and (max-width: 990px) {
  .main-heading h2 {
    font-size: 52px;
    transform: translate(0px, 0px);
  }
  .main-div img {
    max-inline-size: 100%;
    block-size: auto;
  }
  .hero-heading h1 {
    font-size: 2rem;
  }
  ul {
    display: none;
  }
}

@media screen and (max-width: 768px) {
  .main-heading h2 {
    font-size: 32px;
    line-height: 37px;
  }
  .main-div img {
    max-inline-size: 100%;
    block-size: auto;
  }
  .main-heading button {
    transform: translateY(0px);
    width: 300px;
    margin: 2rem;
    float: left;
  }
  .card-name {
    font-size: 1.3rem;
  }
}

